<resources>
    <string name="app_name">Tuyinti</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="input_pwd">请输入密码</string>
    <string name="phone_number">手机号码</string>
    <string name="forget_pwd"><u>忘记密码?</u></string>
    <string name="login_txt">登录</string>
    <string name="sign_up"><u>注册</u></string>
    <string name="nice_see"><u>随便看看</u></string>
    <string name="get_check_code"><u>获取验证码</u></string>
    <string name="message">消息</string>
    <string name="contact">通讯录</string>
    <string name="coloring">美术</string>
    <string name="sprots">体育</string>
    <string name="music">音乐</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_voice_rec">vocie</string>
    <string name="title_activity_cl_course">ClCourse</string>
</resources>
