<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_message"
        android:icon="@drawable/ic_message_green"
        android:title="@string/message" />

    <item
        android:id="@+id/navigation_contact"
        android:icon="@drawable/ic_contact_green"
        android:title="@string/contact" />

    <item
        android:id="@+id/navigation_coloring"
        android:icon="@drawable/ic_coloring_green"
        android:title="@string/coloring" />

    <item
        android:id="@+id/navigation_music"
        android:icon="@drawable/ic_music_green"
        android:title="@string/music" />

    <item
        android:id="@+id/navigation_sports"
        android:icon="@drawable/ic_sports_green"
        android:title="@string/sprots" />


</menu>
