<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="249dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:srcCompat="@mipmap/ic_login_main" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10px"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            app:srcCompat="@mipmap/ic_account" />

         <org.tuyinti.view.XEditText
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:textColorHint="@color/colorFront"
             android:hint="@string/phone_number"
             android:layout_marginRight="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10px"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            app:srcCompat="@mipmap/ic_pwd" />

        <org.tuyinti.view.XEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/input_pwd"
            android:textColorHint="@color/colorFront"
            android:layout_marginRight="20dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/editText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/colorFront"
            android:autoLink="all"
            android:layout_marginLeft="60dp"
            android:text="@string/forget_pwd" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:background="@drawable/login_bk"
            android:textColor="#FFFFFF"
            android:text="@string/login_txt" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="27dp"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:weightSum="1">

        <TextView
            android:id="@+id/sing_up_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/colorFront"
            android:autoLink="all"
            android:layout_marginLeft="60dp"
            android:layout_weight="0.5"
            android:text="@string/sign_up" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/colorFront"
            android:autoLink="all"
            android:layout_marginLeft="60dp"
            android:layout_weight="0.5"
            android:text="@string/nice_see" />

    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:weightSum="1"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <include
            android:id="@+id/line_frist"
            layout="@layout/line_layout"
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:layout_marginLeft="20dp"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_weight="0.4"
            android:layout_width="0dp"
            android:gravity="center"
            android:layout_height="wrap_content"
            android:text="第三方账号登陆"
            />

        <include
            android:id="@+id/line_second"
            layout="@layout/line_layout"
            android:layout_weight="0.3"
            android:layout_width="0dp"
            android:layout_marginRight="20dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>


    <LinearLayout
        android:gravity="center"
        android:weightSum="1"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_margin="20dp"
        android:layout_height="wrap_content">


        <ImageView
            android:id="@+id/qqView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_qq"
            android:layout_weight="0.3"/>

        <ImageView
            android:id="@+id/wechatView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_wechat"
            android:layout_weight="0.3"/>

        <ImageView
            android:id="@+id/sinView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:srcCompat="@drawable/ic_sin"
            android:layout_weight="0.3"/>


    </LinearLayout>




</LinearLayout>