<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="249dp"
        android:orientation="horizontal">


        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            app:srcCompat="@mipmap/ic_login_main" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10px"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            app:srcCompat="@mipmap/ic_account" />

        <org.tuyinti.view.XEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColorHint="@color/colorFront"
            android:hint="@string/phone_number"
            android:layout_marginRight="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10px"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            app:srcCompat="@mipmap/ic_pwd" />

        <org.tuyinti.view.XEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="请输入6-12位密码"
            android:textColorHint="@color/colorFront"
            android:layout_marginRight="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10px"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            app:srcCompat="@mipmap/ic_pwd" />

        <org.tuyinti.view.XEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="确认密码"
            android:textColorHint="@color/colorFront"
            android:layout_marginRight="20dp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10px"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            app:srcCompat="@mipmap/ic_tick" />

        <org.tuyinti.view.XEditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0.50"
            android:hint="请输入验证码"
            android:textColorHint="@color/colorFront"
            android:layout_marginRight="20dp"/>


        <TextView
            android:layout_width="70px"
            android:layout_height="wrap_content"
            android:ems="10"
            android:textColor="@color/colorFront"
            android:autoLink="all"
            android:layout_weight="0.4"
            android:layout_marginRight="60px"
            android:text="@string/get_check_code" />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:padding="10px"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imageView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            app:srcCompat="@mipmap/ic_msg" />

        <org.tuyinti.view.XEditText
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="请输入邀请码"
            android:textColorHint="@color/colorFront"
            android:layout_marginRight="20dp"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_marginTop="20px"
        android:layout_height="50dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="30px"
            android:layout_marginRight="30px"
            android:background="@drawable/login_bk"
            android:textColor="#FFFFFF"
            android:text="@string/sign_up" />


    </LinearLayout>


</LinearLayout>